<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <!-- - - - - - - - - - - - - -->
    <!-- Used throughout Sunshine-->
    <!-- - - - - - - - - - - - - -->

    <!--Used in Action Bar, and in AndroidManifest to tell the device the name of this app.-->
    <!--It's good to keep this short, so your launcher icon isn't displayed with "The greatest Wea"-->
    <!--or something similar.-->
    <string name="app_name">Sunshine</string>



 <!-- Title of the DetailActivity -->
 <string name="title_activity_detail">Details</string>
 <!-- Title of the SettingsActivity -->
 <string name="title_activity_settings">Settings</string>

 <string name="content_authority">com.example.sunshine</string>

 <!-- - - - - - - - - - - -->
 <!--Used by Preferences  -->
 <!-- - - - - - - - - - - -->

 <!-- Label for the location preference [CHAR LIMIT=30] -->
 <string name="pref_location_label">Location</string>

 <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
 <string name="pref_location_key" translatable="false">location</string>

 <!-- Default postal code for location preference [CHAR LIMIT=NONE] -->
 <string name="pref_location_default" translatable="false">Mountain View, CA 94043</string>

 <!-- Label for the temperature units preference [CHAR LIMIT=30] -->
 <string name="pref_units_label">Temperature Units</string>

 <!-- Label for metric option in temperature unit preference [CHAR LIMIT=25] -->
 <string name="pref_units_label_metric">Metric</string>

 <!-- Label for imperial option in temperature unit preference [CHAR LIMIT=25] -->
 <string name="pref_units_label_imperial">Imperial</string>

 <!-- Key name for temperature unit preference in SharedPreferences [CHAR LIMIT=NONE] -->
 <string name="pref_units_key" translatable="false">units</string>

 <!-- Value in SharedPreferences for metric temperature unit option [CHAR LIMIT=NONE] -->
 <string name="pref_units_metric" translatable="false">metric</string>

 <!-- Value in SharedPreferences for imperial temperature unit option [CHAR LIMIT=NONE] -->
 <string name="pref_units_imperial" translatable="false">imperial</string>


 <!-- Strings related to Notification Enabled preference -->
 <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
 <string name="pref_enable_notifications_label">Weather Notifications</string>

 <string name="pref_enable_notifications_true">Enabled</string>
 <string name="pref_enable_notifications_false">Not Enabled</string>

 <string name="pref_last_notification">last_notification</string>

 <!-- - - - - - - - - - - - - -->
    <!--Used by SunshineDateUtils-->
    <!-- - - - - - - - - - - - - -->
    <!--TODO (3) Add a string called action_settings with value of Settings-launchsettings-->
   <string name="action_settings">Settings</string>
    <!--TODO (1) Add a string resource for your error message-->
    <string name="error_message">An Error Has Occurred. Click REFRESH To Try Again.</string>

    <string name="refresh_button">Refresh</string>

    <string name="map_button">Map Location</string>
    <string name="action_share">Share</string>

    <!-- For labelling today's forecast [CHAR LIMIT=15] -->
    <string name="today">Today</string>

    <!-- For labelling tomorrow's forecast [CHAR LIMIT=15] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format [CHAR LIMIT=NONE] -->
    <string name="format_full_friendly_date">
        <xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g>
    </string>


 <!-- - - - - - - - - - - - - - - - -
  - Used by SunshineWeatherUtils   -
  - - - - - - - - - - - - - - - - -->

 <!-- Temperature format -->
 <string name="format_temperature">
        <xliff:g id="temp">%1.0f</xliff:g>\u00B0
    </string>

 <string name="wind_label">Wind</string>
 <!-- Wind in kph -->
 <string name="format_wind_kmh">
        <xliff:g id="speed">%1$1.0f</xliff:g> km/h
        <xliff:g id="direction">%2$s</xliff:g>
    </string>

 <!-- Wind in mph -->
 <string name="format_wind_mph">
        <xliff:g id="speed">%1$1.0f</xliff:g> mph
        <xliff:g id="direction">%2$s</xliff:g>
    </string>

 <string name="pressure_label">Pressure</string>
 <!-- Pressure format -->
 <string name="format_pressure">
        <xliff:g id="pressure">%1.0f</xliff:g> hPa
    </string>

 <string name="humidity_label">Humidity</string>
 <!-- Humidity format -->
 <string name="format_humidity">
        <xliff:g id="humidity">%1.0f</xliff:g> %%
    </string>


 <!-- Weather Conditions (From OpenWeatherMap) -->
    <string name="condition_2xx">Storm</string>
    <string name="condition_3xx">Drizzle</string>
    <string name="condition_500">Light Rain</string>
    <string name="condition_501">Moderate Rain</string>
    <string name="condition_502">Heavy Rain</string>
    <string name="condition_503">Intense Rain</string>
    <string name="condition_504">Extreme Rain</string>
    <string name="condition_511">Freezing Rain</string>
    <string name="condition_520">Light Shower</string>
    <string name="condition_521">Shower</string>
    <string name="condition_522">Heavy Shower</string>
    <string name="condition_531">Ragged Shower</string>
    <string name="condition_600">Light Snow</string>
    <string name="condition_601">Snow</string>
    <string name="condition_602">Heavy Snow</string>
    <string name="condition_611">Sleet</string>
    <string name="condition_612">Shower Sleet</string>
    <string name="condition_615">Rain and Snow</string> <!-- light rain and snow -->
    <string name="condition_616">Rain and Snow</string>
    <string name="condition_620">Shower Snow</string> <!-- light shower snow -->
    <string name="condition_621">Shower Snow</string>
    <string name="condition_622">Shower Snow</string> <!-- heavy shower snow -->
    <string name="condition_701">Mist</string>
    <string name="condition_711">Smoke</string>
    <string name="condition_721">Haze</string>
    <string name="condition_731">Sand, Dust</string>
    <string name="condition_741">Fog</string>
    <string name="condition_751">Sand</string>
    <string name="condition_761">Dust</string>
    <string name="condition_762">Volcanic Ash</string>
    <string name="condition_771">Squalls</string>
    <string name="condition_781">Tornado</string>
    <string name="condition_800">Clear</string>
    <string name="condition_801">Mostly Clear</string>
    <string name="condition_802">Scattered Clouds</string>
    <string name="condition_803">Broken Clouds</string>
    <string name="condition_804">Overcast Clouds</string>
    <string name="condition_900">Tornado</string>
    <string name="condition_901">Tropical Storm</string>
    <string name="condition_902">Hurricane</string>
    <string name="condition_903">Cold</string>
    <string name="condition_904">Hot</string>
    <string name="condition_905">Windy</string>
    <string name="condition_906">Hail</string>
    <string name="condition_951">Calm</string>
    <string name="condition_952">Light Breeze</string>
    <string name="condition_953">Gentle Breeze</string>
    <string name="condition_954">Breeze</string> <!-- moderate breeze -->
    <string name="condition_955">Fresh Breeze</string>
    <string name="condition_956">Strong Breeze</string>
    <string name="condition_957">High Wind</string>
    <string name="condition_958">Gale</string>
    <string name="condition_959">Severe Gale</string>
    <string name="condition_960">Storm</string>
    <string name="condition_961">Violent Storm</string>
    <string name="condition_962">Hurricane</string>

    <string name="condition_unknown">Unknown (<xliff:g id="conditionId">%1$d</xliff:g>)</string>


 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
   - Used for Accessibility purposes (Accessibility == a11y)                            -
   -                                                                                    -
   - Fun Fact: Accessibility is abbreviated a11y because accessibility starts with 'a', -
   - followed by 11 letters, and then a 'y'. It is pronounced alley, like an alley cat. -
   - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 <string name="a11y_forecast">Forecast: <xliff:g id="condition">%1$s</xliff:g></string>
 <string name="a11y_forecast_icon">Forecast icon: <xliff:g id="condition">%1$s</xliff:g></string>
 <string name="a11y_high_temp">High: <xliff:g id="high">%1$s</xliff:g></string>
 <string name="a11y_low_temp">Low: <xliff:g id="low">%1$s</xliff:g></string>
 <string name="a11y_humidity">Humidity: <xliff:g id="humidity">%1$s</xliff:g></string>
 <string name="a11y_pressure">Barometric Pressure: <xliff:g id="pressure">%1$s</xliff:g></string>
 <string name="a11y_wind">Wind speed and direction: <xliff:g id="wind">%1$s</xliff:g></string>



 <!-- Used by NotificationUtils -->

 <!-- The format of the notification we show when the weather is updated -->
 <string name="format_notification">
        Forecast:<xliff:g id="condition">%1$s</xliff:g> -
        High:<xliff:g id="high">%2$s</xliff:g>
        Low:<xliff:g id="low">%3$s</xliff:g>
    </string>

    <!-- - - - - - - - - - - -->
    <!-- Used by NetworkUtils-->
    <!-- - - - - - - - - - - -->
    <!--NONE-->

    <!-- - - - - - - - - - - - - - - -->
    <!-- Used by OpenWeatherJsonUtils-->
    <!-- - - - - - - - - - - - - - - -->
    <!--NONE-->

    <!-- - - - - - - - - - - - - - -->
    <!--Used by SunshinePreferences-->
    <!-- - - - - - - - - - - - - - -->
    <!--NONE-->
</resources>