<?xml version="1.0" encoding="utf-8"?>
    <!--TODO (2) Create an xml resource directory
        TODO (3) Add a PreferenceScreen with an EditTextPreference and ListPreference within the newly created xml resource directory-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:defaultValue="@string/pref_location_default"
        android:key="@string/pref_location_key"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:inputType = "text"
        android:title="@string/pref_location_label" />

    <ListPreference
        android:defaultValue="@string/pref_units_metric"
        android:entries="@array/pref_units_options"
        android:entryValues="@array/pref_units_values"
        android:key="@string/pref_units_key"
        android:title="@string/pref_units_label" />

    <!-- TODO (11) Add a checkbox preference for enabling and disabling notifications -->
    <!-- TODO (12) Set the default of whether or not to show preferences using bools.xml -->
    <CheckBoxPreference
        android:defaultValue="@bool/show_notifications_by_default"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:title="@string/pref_enable_notifications_label" />

</PreferenceScreen>