<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">


    <!--TODO (2) Create a menu resource in res/menu/ called forecast.xml
       TODO (3) Add one item to the menu with an ID of action_refresh
      TODO (4) Set the title of the menu item to "Refresh" using strings.xml-->
    <item
        android:title="@string/refresh_button"
        android:id="@+id/action_refresh"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        />
    <!--TODO (4) Add a Settings option to the main menu-launchsettings-->
    <item
        android:title="@string/action_settings"
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never"
        />

    <!--TODO (1) Add a menu item to open the map-map and sharing-->
    <item android:title="@string/map_button"
        android:id="@+id/action_map"
        app:showAsAction="never"/>
</menu>